--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -286,6 +286,10 @@ endif # NETWORK_FILESYSTEMS
 source "fs/nls/Kconfig"
 source "fs/dlm/Kconfig"
 
+config ASYNC_FSYNC
+	bool "asynchronous fsync"
+	default y
+
 config DYNAMIC_FSYNC
 	bool "dynamic file sync control"
 	default n
