--- a/drivers/devfreq/Kconfig
+++ b/drivers/devfreq/Kconfig
@@ -100,6 +100,14 @@ config DEVFREQ_GOV_MSM_CPUBW_HWMON
 	  with existing profiling tools.  This governor is unlikely to be
 	  useful for other devices.
 
+config DEVFREQ_GOV_CONSERVATIVE
+	tristate "Conservative"
+	depends on MSM_KGSL
+	help
+		Chooses frequency based on the recent load on the device. Works
+		similar as conservative governor of cpufreq does and implements
+		the useful optimizations from Adreno TZ.
+
 config SIMPLE_GPU_ALGORITHM
 	bool "Simple GPU algorithm"
 	depends on DEVFREQ_GOV_MSM_ADRENO_TZ
