powersuspend: New PM driver + wavelocks
powersuspend: new PM kernel driver for Android w/o early_suspend

Android early_suspend/late_resume PM kernel driver framework has been
deprecated by Google. This new powersuspend PM kernel driver is a replacement
for it and existing early_suspend drivers can be easily adapted to use this
new replacement driver

Signed-off-by: Paul Reioux <reioux@gmail.com>
powersuspend: fix logci derps :p

Signed-off-by: Paul Reioux <reioux@gmail.com>
kernel/power/powersuspend: remove userspace dependency from powersuspend

make powersuspend not depend on a userspace initiator anymore, but use a hook
in autosleep instead.

Signed-off-by: Paul Reioux <reioux@gmail.com>
kernel/power/powersuspend: add back userpace control w/ default kernel control

make kernel / userspace mode switchable

Signed-off-by: Paul Reioux <reioux@gmail.com>
kernel/power/powersuspend: default to userspace for now

Signed-off-by: Paul Reioux <reioux@gmail.com>
kernel/power/powersuspend: LCD screen on/off hooks (Yank555.lu)

- add an alternative hook for screen on / off detection in the display
  pannel driver
- sleeps  ~0.1s sooner, wakes up ~1s later then autosleep
- clean up source formatting a bit (Paul Reioux)

Signed-off-by: Paul Reioux <reioux@gmail.com>
mdss_dsi_panel.c: add powersuspend hooks

Signed-off-by: Paul Reioux <reioux@gmail.com>
kernel/power/powersuspend: cumulative update to version 1.5

- fix hybrid-kernel mode cannot be set through sysfs

kernel/power/powersuspend: new PM kernel driver for Android w/o early_suspend v1.4 (Yank555.lu)

- add hybrid-kernel mode (autosleep and panel, first wins)
- default to hybrid-kernel mode
- harmonize debug message with my other stuff
- include all 3 modes as default, so it's only commenting out to change

kernel/power/powersuspend: new PM kernel driver for Android w/o early_suspend v1.3 (Yank555.lu)

- fix stupid typo
- add an alternative hook for screen on / off detection in the display panel driver
(sleeps ~0.1s 

--- a/arch/arm/configs/d802_defconfig
+++ b/arch/arm/configs/d802_defconfig
@@ -46,6 +46,7 @@ CONFIG_INTELLI_HOTPLUG=y
 CONFIG_BRICKED_HOTPLUG=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_FRANDOM=y
+CONFIG_POWERSUSPEND=y
 
 #
 # Lambda - I/O Schedulers
@@ -129,6 +130,8 @@ CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ADRENO_IDLER=y
 CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+CONFIG_HAS_WAKELOCK=y
+CONFIG_WAKELOCK=y
 
 #
 # Lambda - Thermal
