Add Sweep2Sleep configured from Sweep2Wake
Credits to savoca and dorimanx

Signed-off-by: Ícaro Hoff <icarohoff@gmail.com>

--- a/arch/arm/configs/d800_defconfig
+++ b/arch/arm/configs/d800_defconfig
@@ -128,6 +128,7 @@ CONFIG_CC_OPTIMIZE_MORE=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ADRENO_IDLER=y
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
 
 #
 # Lambda - Thermal
