--- a/arch/arm/configs/d802_defconfig
+++ b/arch/arm/configs/d802_defconfig
@@ -44,6 +44,7 @@ CONFIG_STATE_NOTIFIER=y
 CONFIG_MSM_HOTPLUG=y
 CONFIG_INTELLI_HOTPLUG=y
 CONFIG_BRICKED_HOTPLUG=y
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 # Lambda - I/O Schedulers
