--- a/arch/arm/configs/d803_defconfig
+++ b/arch/arm/configs/d803_defconfig
@@ -48,7 +48,18 @@ CONFIG_STATE_NOTIFIER=y
 CONFIG_FS_SYNC=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 CONFIG_CPU_VOLTAGE_TABLE=y
-CONFIG_THERMAL_MONITOR_SIMPLE=y
+# CONFIG_PM_SYNC_BEFORE_SUSPEND  is not set
+CONFIG_CC_OPTIMIZE_MORE=y
+CONFIG_SIMPLE_GPU_ALGORITHM=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_ADRENO_IDLER=y
+
+#
+# Lambda - Thermal
+#
+CONFIG_THERMAL_MONITOR=y
+# CONFIG_THERMAL_MONITOR_SIMPLE is not set
+CONFIG_MSM_RUN_QUEUE_STATS_BE_CONSERVATIVE=y
 
 #
 # Lambda - Filesystems
@@ -56,6 +67,25 @@ CONFIG_THERMAL_MONITOR_SIMPLE=y
 CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_DEFAULT_CODEPAGE=437
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
+
+#
+# Lamda - TCP Options
+#
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_BIC=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_CUBIC=y
+CONFIG_TCP_CONG_HSTCP=y
+CONFIG_TCP_CONG_HYBLA=y
+CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_SCALABLE=y
+CONFIG_TCP_CONG_LP=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_TCP_CONG_YEAH=y
+CONFIG_TCP_CONG_ILLINOIS=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
 
 #
 # General setup
@@ -915,9 +945,6 @@ CONFIG_INET_XFRM_MODE_BEET=y
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
-# CONFIG_TCP_CONG_ADVANCED is not set
-CONFIG_TCP_CONG_CUBIC=y
-CONFIG_DEFAULT_TCP_CONG="cubic"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_PRIVACY=y
@@ -2233,7 +2260,6 @@ CONFIG_THERMAL_HWMON=y
 # CONFIG_THERMAL_TSENS is not set
 # CONFIG_THERMAL_TSENS8960 is not set
 CONFIG_THERMAL_TSENS8974=y
-CONFIG_THERMAL_MONITOR=y
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
 # CONFIG_WATCHDOG is not set
