--- a/arch/arm/configs/d802_defconfig
+++ b/arch/arm/configs/d802_defconfig
@@ -41,6 +41,13 @@ CONFIG_IRQ_WORK=y
 #
 CONFIG_MSM_LIMITER=y
 CONFIG_STATE_NOTIFIER=y
+CONFIG_MSM_HOTPLUG=y
+
+#
+# Lambda - Governors
+#
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX_MSM8974=y
 
 #
 # Lambda - Features
@@ -57,8 +64,8 @@ CONFIG_ADRENO_IDLER=y
 #
 # Lambda - Thermal
 #
-CONFIG_THERMAL_MONITOR=y
-# CONFIG_THERMAL_MONITOR_SIMPLE is not set
+# CONFIG_THERMAL_MONITOR is not set
+CONFIG_THERMAL_MONITOR_SIMPLE=y
 CONFIG_MSM_RUN_QUEUE_STATS_BE_CONSERVATIVE=y
 
 #
