--- a/arch/arm/configs/ls980_defconfig
+++ b/arch/arm/configs/ls980_defconfig
@@ -42,6 +42,8 @@ CONFIG_IRQ_WORK=y
 CONFIG_MSM_LIMITER=y
 CONFIG_STATE_NOTIFIER=y
 CONFIG_MSM_HOTPLUG=y
+CONFIG_INTELLI_HOTPLUG=y
+CONFIG_BRICKED_HOTPLUG=y
 
 #
 # Lambda - Governors
@@ -2034,7 +2036,7 @@ CONFIG_SPI_QUP=y
 #
 # SPI Protocol Masters
 #
-# CONFIG_SPI_SPIDEV is not set
+CONFIG_SPI_SPIDEV=m
 # CONFIG_SPI_TLE62X0 is not set
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
@@ -3159,7 +3161,7 @@ CONFIG_MMC_PARANOID_SD_INIT=y
 CONFIG_MMC_BLOCK=y
 CONFIG_MMC_BLOCK_MINORS=32
 # CONFIG_MMC_BLOCK_BOUNCE is not set
-CONFIG_MMC_BLOCK_DEFERRED_RESUME
+CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
 # CONFIG_SDIO_UART is not set
 # CONFIG_MMC_TEST is not set
 CONFIG_MMC_BLOCK_TEST=y
