--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -211,6 +211,15 @@ config CPU_FREQ_DEFAULT_GOV_YANKACTIVE
 	   loading your cpufreq low-level hardware driver, using the
 	   'yankactive' governor for latency-sensitive workloads.
 
+config CPU_FREQ_DEFAULT_GOV_IMPULSE
+		  bool "impulse"
+		  select CPU_FREQ_GOV_IMPULSE
+		  help
+		  	Use the CPUFreq governor 'impulse' as default. This allows
+		  	you to get a full dynamic cpu frequency capable system by simply
+		  	loading your cpufreq low-level hardware driver, using the
+				'impulse' governor for latency-sensitive workloads.
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -424,6 +433,18 @@ config CPU_FREQ_GOV_YANKACTIVE
 	  The governor is based on interactive with just different default settings
 	  and can be achieved using interactive with a script. This is added for
 	  simplification purposes for myself.
+
+config CPU_FREQ_GOV_IMPULSE
+		tristate "'impulse' cpufreq policy governor"
+		help
+		'impulse' - This driver adds a dynamic cpufreq policy governor
+		designed for latency-sensitive workloads.
+
+		This governor attempts to reduce the latency of clock
+		increases so that the system is more responsive to
+		interactive workloads.
+
+		If in doubt, say N.
 
 menu "x86 CPU frequency scaling drivers"
 depends on X86
