--- a/arch/arm/configs/d802_defconfig
+++ b/arch/arm/configs/d802_defconfig
@@ -45,6 +45,7 @@ CONFIG_MSM_HOTPLUG=y
 CONFIG_INTELLI_HOTPLUG=y
 CONFIG_BRICKED_HOTPLUG=y
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_FRANDOM=y
 
 #
 # Lambda - I/O Schedulers
