--- a/arch/arm/configs/d802_defconfig
+++ b/arch/arm/configs/d802_defconfig
@@ -3191,7 +3191,6 @@ CONFIG_MMC=y
 CONFIG_MMC_PERF_PROFILING=y
 # CONFIG_LGE_MMC_SD_USE_SDCC3 is not set
 CONFIG_LGE_MMC_BKOPS_ENABLE=y
-# CONFIG_LGE_MMC_RESET_IF_HANG is not set
 # CONFIG_LGE_MMC_DYNAMIC_LOG is not set
 CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_CLKGATE=y
@@ -3220,6 +3219,7 @@ CONFIG_MMC_SDHCI_PLTFM=y
 # CONFIG_MMC_SDHCI_PXAV2 is not set
 CONFIG_MMC_MSM=y
 CONFIG_MMC_SDHCI_MSM=y
+CONFIG_MMC_SDHCI_MSM_DISABLE_HPI=y
 CONFIG_MMC_MSM_SDC1_SUPPORT=y
 # CONFIG_MMC_MSM_SDC1_8_BIT_SUPPORT is not set
 CONFIG_MMC_MSM_SDC2_SUPPORT=y
