--- a/arch/arm/configs/d802_defconfig
+++ b/arch/arm/configs/d802_defconfig
@@ -3488,6 +3488,7 @@ CONFIG_DEVFREQ_GOV_USERSPACE=y
 CONFIG_DEVFREQ_GOV_MSM_ADRENO_TZ=y
 CONFIG_DEVFREQ_GOV_MSM_CPUFREQ=y
 CONFIG_DEVFREQ_GOV_MSM_CPUBW_HWMON=y
+CONFIG_DEVFREQ_GOV_CONSERVATIVE=y
 
 #
 # DEVFREQ Drivers
