conf: Enable D802 for esfinge's beta
Signed-off-by: Ícaro Hoff <icarohoff@gmail.com>

--- a/arch/arm/configs/d802_defconfig
+++ b/arch/arm/configs/d802_defconfig
@@ -132,6 +132,8 @@ CONFIG_FRANDOM=y
 CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
 CONFIG_HAS_WAKELOCK=y
 CONFIG_WAKELOCK=y
+CONFIG_DYNAMIC_FSYNC=y
+CONFIG_ASYNC_FSYNC=y
 
 #
 # Lambda - Thermal
