--- a/arch/arm/configs/vs980_defconfig
+++ b/arch/arm/configs/vs980_defconfig
@@ -45,7 +45,6 @@ CONFIG_MSM_HOTPLUG=y
 CONFIG_INTELLI_HOTPLUG=y
 CONFIG_BRICKED_HOTPLUG=y
 CONFIG_FORCE_FAST_CHARGE=y
-CONFIG_FRANDOM=y
 
 #
 # Lambda - I/O Schedulers
@@ -128,7 +127,10 @@ CONFIG_CC_OPTIMIZE_MORE=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ADRENO_IDLER=y
+CONFIG_FRANDOM=y
 CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+CONFIG_DYNAMIC_FSYNC=y
+CONFIG_ASYNC_FSYNC=y
 
 #
 # Lambda - Thermal
@@ -3194,7 +3196,6 @@ CONFIG_MMC=y
 CONFIG_MMC_PERF_PROFILING=y
 # CONFIG_LGE_MMC_SD_USE_SDCC3 is not set
 CONFIG_LGE_MMC_BKOPS_ENABLE=y
-# CONFIG_LGE_MMC_RESET_IF_HANG is not set
 # CONFIG_LGE_MMC_DYNAMIC_LOG is not set
 CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_CLKGATE=y
@@ -3223,6 +3224,7 @@ CONFIG_MMC_SDHCI_PLTFM=y
 # CONFIG_MMC_SDHCI_PXAV2 is not set
 CONFIG_MMC_MSM=y
 CONFIG_MMC_SDHCI_MSM=y
+CONFIG_MMC_SDHCI_MSM_DISABLE_HPI=y
 CONFIG_MMC_MSM_SDC1_SUPPORT=y
 # CONFIG_MMC_MSM_SDC1_8_BIT_SUPPORT is not set
 CONFIG_MMC_MSM_SDC2_SUPPORT=y
@@ -3487,7 +3489,9 @@ CONFIG_DEVFREQ_GOV_POWERSAVE=y
 CONFIG_DEVFREQ_GOV_USERSPACE=y
 CONFIG_DEVFREQ_GOV_MSM_ADRENO_TZ=y
 CONFIG_DEVFREQ_GOV_MSM_CPUFREQ=y
-CONFIG_DEVFREQ_GOV_MSM_CPUBW_HWMON=y
+CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
+CONFIG_DEVFREQ_GOV_CONSERVATIVE=y
+CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 
 #
 # DEVFREQ Drivers
