conf: Improved MSM thermal - switch to it!
Signed-off-by: Ícaro Hoff <icarohoff@gmail.com>

--- a/arch/arm/configs/d800_defconfig
+++ b/arch/arm/configs/d800_defconfig
@@ -135,8 +135,8 @@ CONFIG_ASYNC_FSYNC=y
 #
 # Lambda - Thermal
 #
-# CONFIG_THERMAL_MONITOR is not set
-CONFIG_THERMAL_MONITOR_SIMPLE=y
+CONFIG_THERMAL_MONITOR=y
+# CONFIG_THERMAL_MONITOR_SIMPLE is not set
 CONFIG_MSM_RUN_QUEUE_STATS_BE_CONSERVATIVE=y
 
 #
