--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,11 @@ modules.builtin
 *.bz2
 *.lzma
 *.xz
+*.lz4
 *.lzo
 *.patch
 *.gcno
+*.log
 
 #
 # Top-level generic files
@@ -84,3 +86,8 @@ GTAGS
 *.orig
 *~
 \#*#
+arch/arm/boot/compressed/piggy.lz4
+arch/arm/mach-msm/smd_rpc_sym.c
+kernel/hz.bc
+/store/
+ozip/boot.img
